syntax = "proto3";
package stratos.pot.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/staking/v1beta1/staking.proto";

option go_package = "github.com/stratosnet/stratos-chain/x/pot/types";

// EventVolumeReport is emitted on Msg/MsgVolumeReport
message EventVolumeReport {
  string report_reference = 1;
  string epoch = 2 [
    (gogoproto.nullable) = false,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
}

// EventWithdraw is emitted on Msg/MsgWithdraw
message EventWithdraw {
  repeated cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string wallet_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
  string target_address = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
}

// EventFoundationDeposit is emitted on Msg/MsgFoundationDeposit
message EventFoundationDeposit {
  repeated cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// EventSlashing is emitted on Msg/MsgSlashingResourceNode
message EventSlashing {
  string wallet_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
  string network_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
  string amount = 3 [
    (gogoproto.nullable) = false,
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  string slashing_type = 4;
  bool suspend = 5;
}
